--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,13 +287,15 @@ h6 {
   border-bottom: 3px solid #149ddd;
 }
 
-@media (min-width: initial) {
+@media (min-width: 768px) {
+   max-width: 100%;
   #hero {
     background-attachment: fixed;
   }
 }
 
-@media (max-width: initial) {
+@media (max-width: 768px) {
+ max-width: 100%;
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
