--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,7 +267,7 @@ h6 {
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 90px;
   color: #000000;
 }
@@ -277,7 +277,7 @@ h6 {
   margin-bottom: 50px;
   font-size: 15px;
   font-family: "Poppins", sans-serif;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 #hero p span {
