--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ h6 {
   }
 
   #main {
-    margin-left: -50px;
+    margin-left: 0;
   }
 
   .container,
@@ -260,14 +260,14 @@ h6 {
 #hero .hero-container {
   position: relative;
   z-index: 2;
-  margin-left: -50px;
+  margin-left: -350px;
   min-width: 200px;
 }
 
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 30px;
-  font-weight: 500;
+  font-size: 60px;
+  font-weight: 700;
   line-height: 90px;
   color: #000000;
 }
@@ -275,7 +275,7 @@ h6 {
 #hero p {
   color: #000000;
   margin-bottom: 50px;
-  font-size: 15px;
+  font-size: 30px;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
@@ -287,13 +287,13 @@ h6 {
   border-bottom: 3px solid #149ddd;
 }
 
-@media (min-width:1024px) {
+@media (min-width: 1024px) {
   #hero {
     background-attachment: fixed;
   }
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
