--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,31 +253,29 @@ h6 {
   bottom: 0;
   top: 0;
   left: 0;
-  right: 0px;
+  right: 0;
   z-index: 1;
 }
 
 #hero .hero-container {
   position: relative;
   z-index: 2;
-  margin-left: -350px;
-  min-width: 200px;
+  min-width: 300px;
 }
 
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 60px;
   font-weight: 700;
-  line-height: 90px;
+  line-height: 56px;
   color: #000000;
 }
 
 #hero p {
   color: #000000;
   margin-bottom: 50px;
-  font-size: 30px;
+  font-size: 26px;
   font-family: "Poppins", sans-serif;
-  font-weight: 500;
 }
 
 #hero p span {
